k8/vets-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-petclinic-vets-service
  labels:
    app: petclinic-vets-service

spec:
  template:
    metadata:
      name: pod-petclinic-vets-service
      labels:
        app: petclinic-microservice
        service: vets-service
    spec:
      containers:
        - name: vets-service
          image: ${javaapp_docker_image_prefix}/spring-petclinic-vets-service
          command: ["./dockerize","-wait=tcp://discovery-server:8761","-timeout=60s","--","java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
          ports:
            - containerPort: 8083
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-microservice
      service: vets-service

---

apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  #type: NodePort
  ports:
    - name: "8083"
      targetPort: 8083
      port: 8083
      #nodePort: 30761
  selector:
    app: petclinic-microservice
    service: vets-service
