k8/nginx-ingress-resources.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-petclinic
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
     - host: registry.dcdevtesting.com
       http:
        paths:
          - path: /
            backend:
              serviceName: discovery-server
              servicePort: 8761
     - host: config.dcdevtesting.com
       http:
        paths:
          - path: /
            backend:
              serviceName: config-server
              servicePort: 8888
     - host: customers.dcdevtesting.com
       http:
        paths:
          - path: /
            backend:
              serviceName: customers-service
              servicePort: 8081
     - host: visits.dcdevtesting.com
       http:
        paths:
          - path: /
            backend:
              serviceName: visits-service
              servicePort: 8082
     - host: vets.dcdevtesting.com
       http:
        paths:
          - path: /
            backend:
              serviceName: vets-service
              servicePort: 8083
     - host: frontend.dcdevtesting.com
       http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 8080
     - host: tracing.dcdevtesting.com
       http:
        paths:
          - path: /
            backend:
              serviceName: tracing-server
              servicePort: 9411
     - host: sonar.dcdevtesting.com
       http:
        paths:
          - path: /
            backend:
              serviceName: sonar-server
              servicePort: 9000
          - path: /
            backend:
              serviceName: sonar-server
              servicePort: 9092
